# vision_vehicle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/vision_vehicle/: CMakeLists.txt  camera_provider.h  comm_service.cpp  comm_service.h  detection_service.cpp  detection_service.h  general_setting.cpp  general_setting.h  main.cpp  readme.md  runtime_setting.cpp  runtime_setting.h  setting.yaml  vehicle_process.cpp  vehicle_process.h  video_saver.cpp  video_saver.h  vision_provider.cpp  vision_provider.h
cmake/: predefines.cmake
make-deps/: .gitignore  LICENSE  README.md  cmd_options.py  dep_utils.py  make-deps.py  module_base.py  module_loader.py
make-deps/modules/: OpenCV.py  eigen3.py  jsoncpp.py  rkmpp.py  spdlog.py  yaml-cpp.py
modules/: CMakeLists.txt
modules/CameraCapture/: CMakeLists.txt  README.md  camera.cpp  camera.h  camera_driver.cpp  camera_driver.h  camera_info.h  camera_options.h  capture_callback.h  device_options.h  easy_camera.hpp
modules/CameraCapture/drivers/: general_usb_camera.cpp  general_usb_camera.h
modules/CommonUtils/: CMakeLists.txt  logger.cpp  logger.h  sys_utils.cpp
modules/dma_alloc/: CMakeLists.txt  dma_alloc.cpp  dma_buffer.h
modules/mp4v2/: CMakeLists.txt  GNUmakefile.in  configure
modules/mp4v2/doc/: Authors.txt  BuildRepository.txt  BuildSource.txt  Documentation.txt  ReleaseNotes.txt  ToolGuide.txt
modules/mp4v2/doc/man/man1/: mp4art.1  mp4chaps.1  mp4file.1  mp4subtitle.1  mp4tags.1  mp4track.1
modules/mp4v2/libplatform/: config.h.in
modules/mp4v2/project/: project.m4
modules/rk_npu_inference/: CMakeLists.txt  common.h  image_utils.c  image_utils.h  rk_detection.cpp  rk_detection.h  rk_detection_postprocess.h
modules/rk_npu_inference/ppyoloe/: inference.cpp  inference.h  postprocess.cc  postprocess.h
modules/rk_npu_inference/yolov6/: inference.cc  inference.h  postprocess.cc  postprocess.h
modules/rkde/: CMakeLists.txt  h264_encoder.cpp  h264_encoder.h  jpeg_decoder.cpp  jpeg_decoder.h
